Fix character double scroll bar

--- a/characters/characters.css
+++ b/characters/characters.css
@@ -28,12 +28,14 @@ body {
 	height: 100%;
   display: flex;
   margin: auto;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .misc-page {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+  max-height: max-content;
   display: flex;
   flex-direction: column;
   gap: 64px;
